# dytbaat

./: .gitignore  AudioLibrary.cpp  AudioLibrary.h  CMakeLists.txt  Cat.cpp  Cat.h  CommunicationService.cpp  CommunicationService.h  DataLinkLayer.cpp  DataLinkLayer.h  Dog.cpp  Dog.h  Sine.cpp  Sine.hpp  TransmissionLayer.cpp  TransmissionLayer.h  main.cpp  testfile.cpp
Applications/: CMakeLists.txt  Messenger.cpp
CommunicationService/: CMakeLists.txt  CommunicationService.cpp  CommunicationService.h
CommunicationService/DataLinkLayer/: CMakeLists.txt  DataLinkLayer.cpp  DataLinkLayer.h
CommunicationService/DataLinkLayer/SelectiveRepeat/: CMakeLists.txt  SelectiveRepeat.cpp  SelectiveRepeat.h
CommunicationService/DataLinkLayer/StopAndWait/: CMakeLists.txt  StopAndWait.cpp  StopAndWait.h
CommunicationService/DataLinkLayer/StopAndWait/Test/: testfile.cpp
CommunicationService/Logger/: CMakeLists.txt  FsWriter.h  Logger.cpp  Logger.h
CommunicationService/Media/: CMakeLists.txt  Media.cpp  Media.h
CommunicationService/Media/IdealAudio/: CMakeLists.txt  IdealAudio.cpp  IdealAudio.h
CommunicationService/Media/IdealAudio/Test/: idealAudioTest.cpp
CommunicationService/Media/PaWrapper/: PaCallBackData.h
CommunicationService/Media/PaWrapper/Test/: Mic.cpp  MultipleInstances.cpp
CommunicationService/Media/RealAudio/: CMakeLists.txt  RealAudio.cpp  RealAudio.h
CommunicationService/Media/RealAudio/Test/: RealAudio.cpp
CommunicationService/Test/: ChatProgram.cpp  CommunicationTest.cpp  FrameTravelTimeTest.cpp  SelectiveRepeatTest.cpp  transmitAndOnReceiveCallback.cpp
CommunicationService/TransmissionLayer/: TransmissionLayer.cpp  TransmissionLayer.h
CommunicationService/TransmissionLayer/AcousticTL/: AcousticTL.cpp  AcousticTL.h  CMakeLists.txt  helperFunctions.h
CommunicationService/TransmissionLayer/AcousticTL/DtmfAnalysis/: CMakeLists.txt  DtmfAnalysis.cpp  DtmfAnalysis.h
CommunicationService/TransmissionLayer/AcousticTL/DtmfAnalysis/Test/: DtmfAnalysisTest.cpp
CommunicationService/TransmissionLayer/AcousticTL/DtmfSpec/: DtmfSpec.cpp  DtmfSpec.h
CommunicationService/TransmissionLayer/AcousticTL/DtmfTone/: CMakeLists.txt  DtmfTone.cpp  DtmfTone.h
CommunicationService/TransmissionLayer/AcousticTL/FrameProtocol/: CMakeLists.txt  FrameProtocol.cpp  FrameProtocol.h
CommunicationService/TransmissionLayer/AcousticTL/FrameReceiver/: CMakeLists.txt  FrameReceiver.cpp  FrameReceiver.h
CommunicationService/TransmissionLayer/AcousticTL/FreqGeneration/: FreqGeneration.cpp  FreqGeneration.h
CommunicationService/TransmissionLayer/AcousticTL/FreqGeneration/Test/: FreqGenerationTest.cpp
CommunicationService/TransmissionLayer/AcousticTL/PaWrapper/: CMakeLists.txt  PaWrapper.cpp  PaWrapper.h
CommunicationService/TransmissionLayer/AcousticTL/PaWrapper/Test/: Sine.cpp
CommunicationService/TransmissionLayer/AcousticTL/Sync/: Sync.cpp  Sync.h
CommunicationService/TransmissionLayer/AcousticTL/Test/: atlPlayFrame.cpp  atlSendReceive.cpp  goertzelPerformance.cpp
PaWrapper/: CMakeLists.txt  PaCallBackData.h  PaLifeHandler.h  PaWrapper.cpp  PaWrapper.h
PaWrapper/Test/: Mic.cpp  MultipleInstances.cpp  Sine.cpp
TransmissionLayer/: CMakeLists.txt  TransmissionLayer.cpp  TransmissionLayer.h
TransmissionLayer/AcousticTL/: AcousticTL.cpp  AcousticTL.h  CMakeLists.txt  helperFunctions.h
TransmissionLayer/AcousticTL/DtmfAnalysis/Test/: DtmfAnalysisTest.cpp
TransmissionLayer/AcousticTL/DtmfSpec/: DtmfSpec.cpp
TransmissionLayer/AcousticTL/DtmfSpec/Test/: DtmfSpecTest.cpp
TransmissionLayer/AcousticTL/FrameProtocol/: FrameProtocol.cpp  FrameProtocol.h
TransmissionLayer/AcousticTL/FrameReceiver/: CMakeLists.txt  FrameReceiver.cpp  FrameReceiver.h
TransmissionLayer/AcousticTL/FreqGeneration/: FreqGeneration.cpp  FreqGeneration.h
TransmissionLayer/AcousticTL/FreqGeneration/Test/: FreqGenerationTest.cpp
TransmissionLayer/AcousticTL/PaWrapper/: CMakeLists.txt  PaLifeHandler.h  PaWrapper.cpp
TransmissionLayer/AcousticTL/PaWrapper/Test/: Mic.cpp  Sine.cpp
TransmissionLayer/AcousticTL/Sync/: CMakeLists.txt  Sync.cpp  Sync.h
TransmissionLayer/AcousticTL/Test/: atlPlayFrame.cpp  atlSendReceive.cpp
TransmissionLayer/AucousticTL/: AcousticTL.cpp  AcousticTL.h  AucousticTL.cpp  AucousticTL.h  CMakeLists.txt  DtmfSpec.cpp  DtmfSpec.h  helperFunctions.h
TransmissionLayer/AucousticTL/DtmfAnalysis/: DtmfAnalysis.cpp  DtmfAnalysis.h
TransmissionLayer/AucousticTL/DtmfAnalysis/Test/: DtmfAnalysisTest.cpp
TransmissionLayer/AucousticTL/DtmfSpec/: CMakeLists.txt
TransmissionLayer/AucousticTL/FrameReceiver/: FrameReceiver.cpp  FrameReceiver.h
TransmissionLayer/AucousticTL/FreqGeneration/: CMakeLists.txt  FreqGeneration.cpp  FreqGeneration.h
TransmissionLayer/AucousticTL/FreqGeneration/Test/: FreqGenerationTest.cpp
TransmissionLayer/AucousticTL/PaWrapper/: CMakeLists.txt  PaLifeHandler.h  PaWrapper.cpp  PaWrapper.h
TransmissionLayer/AucousticTL/PaWrapper/Test/: Sine.cpp
TransmissionLayer/AucousticTL/Sync/: CmakeLists.txt  Sync.cpp
TransmissionLayer/AucousticTL/Test/: DtmfSpecTest.cpp  atlPlayFrame.cpp
cmake/: FindPortaudio.cmake
